# CrossSpeciesComparisonGeneDetectPlugin

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
src/: CrossSpeciesComparisonGeneDetectPlugin.cpp  CrossSpeciesComparisonGeneDetectPlugin.h  CrossSpeciesComparisonGeneDetectPlugin.json  SettingsAction.Analysis.inl  SettingsAction.Data.inl  SettingsAction.Serialization.inl  SettingsAction.Tree.inl  SettingsAction.Ui.inl  SettingsAction.cpp  SettingsAction.h
src/lib/Distance/: mman.h
src/lib/NewickComparator/: newick_comparator.h
